syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package rpc;

// The service definition.
service CNIBackend {
  rpc AddNetwork (AddNetworkRequest) returns (AddNetworkReply) {}
  rpc DelNetwork (DelNetworkRequest) returns (DelNetworkReply) {}
}

message AddNetworkRequest {
  string K8S_POD_NAME = 1;
  string K8S_POD_NAMESPACE = 2;
  string K8S_POD_INFRA_CONTAINER_ID = 3;
  string Netns = 4;
  string IfName = 5;
}

message  AddNetworkReply{
  bool Success = 1;
  string IPv4Addr = 2;
  string IPv4Subnet = 3;
  int32 DeviceNumber = 4;
  int32 MTU = 5;
}

message DelNetworkRequest {
  string K8S_POD_NAME = 1;
  string K8S_POD_NAMESPACE = 2;
  string K8S_POD_INFRA_CONTAINER_ID = 3;
  string IPv4Addr = 4;
  string Reason = 5;
}

message DelNetworkReply {
  bool Success = 1;
  string IPv4Addr = 2;
  int32 DeviceNumber = 3;
}
